# evm-cfg-rs

./: .gitignore  Cargo.toml
src/: lib.rs  op.rs  op_data.rs  stack.rs
test-data/: eth_pot_memnonic  ethereum_pot
