[package]
name = "ser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.1.0"
ethabi = "16.0.0"
ethers-solc = { git = "https://github.com/gakonst/ethers-rs", features = ["project-util", "asm", "async", "svm"] }
hex = "0.4.3"
petgraph = "0.6.0"
primitive-types = "0.11.1"
revm = { git = "https://github.com/bluealloy/revm" }
